--- a/plugins/node.d/snmp__print_pages.in
+++ b/plugins/node.d/snmp__print_pages.in
@@ -56,11 +56,11 @@ use strict;
 use Munin::Plugin;
 use Munin::Plugin::SNMP;
 
-
+my $oid = '1.3.6.1.2.1.43.10.2.1.4.1.1';
 my $response;
 
 if(defined $ARGV[0] and $ARGV[0] eq "snmpconf") {
-    print "require 1.3.6.1.2.1.43.10.2.1.4.1.1\n";
+    print "require ${oid}.\n";
     exit 0;
 }
 
@@ -94,5 +94,5 @@ pages.info pages printed pr minute
 exit 0;
 }
 
-print "pages.value ", $session->get_single("1.3.6.1.2.1.43.10.2.1.4.1.1"), "\n";
+print "pages.value ", $session->get_single($oid), "\n";
 
