--- a/plugins/node.d/postgres_prepared_xacts_.in
+++ b/plugins/node.d/postgres_prepared_xacts_.in
@@ -28,8 +28,8 @@ postgres_prepared_xacts_ - Plugin to monitor number of prepared
 Configuration is done through libpq environment variables, for example
 PGUSER, PGDATABASE, etc. For more information, see L<Munin::Plugin::Pgsql>.
 
-To monitor a specific database, link to postgres_size_<databasename>.
-To monitor all databases, link to postgres_size_ALL.
+To monitor a specific database, link to postgres_prepared_xacts_<databasename>.
+To monitor all databases, link to postgres_prepared_xacts_ALL.
 
 =head1 SEE ALSO
 
