ejabberd_: allow overriding the ejabberd.cfg path and add /etc/jabber to search paths.
This fixes ejabberd_ plugin on Gentoo and solves one of the known bugs
of the plugin.

--- a/plugins/node.d/ejabberd_.in
+++ b/plugins/node.d/ejabberd_.in
@@ -63,6 +63,15 @@ graph.
 
 =back
 
+If your ejabberd.cfg cannot be found you can se it this way
+
+=over 4
+
+  [ejabberd_*]
+    env.configfile /etc/ejabberd/ejabberd.cfg
+
+=back
+
 =head1 MAGIC MARKERS
 
   #%# family=contrib
@@ -87,9 +96,6 @@ data series names.  Munin works around this limit and the restriction
 does not apply.
 
 There is no way to configure the path to ejabberdctl.
-
-There is no way to configure the "/etc" path.  /etc/ejabberd and
-/usr/local/ejabberd/etc is hardcoded in the script.
 
 =cut
 
@@ -118,12 +124,14 @@ fi
 
 # trying to autodetect running vhosts.
 if [ -z "$vhosts" ]; then
-    for CFGPATH in /etc/ejabberd /usr/local/ejabberd/etc; do
-        if [ -f "$CFGPATH/ejabberd.cfg" ]; then
-            EJCFG=$CFGPATH/ejabberd.cfg;
-        fi
-    done
-    if [ -z "$EJCFG" ]; then
+    if [ -z "$configfile" ]; then
+	for CFGPATH in /etc/ejabberd /etc/ejabber /usr/local/ejabberd/etc; do
+            if [ -f "$CFGPATH/ejabberd.cfg" ]; then
+		configfile=$CFGPATH/ejabberd.cfg;
+            fi
+	done
+    fi
+    if [ -z "$configfile" ]; then
         echo "Unable to find ejabberd.cfg. Exiting." >&2
         exit -1
     fi
